source/terraform/kubernetes-observability/values/prometheus/ingress-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flov2-prometheus.ps.conneqt.cloud`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
